<resources>
    <string name="app_name">workshop</string>
    <string name="name">Mohamed Salah</string>
    <string name="first_half">First Half</string>
    <string name="second_half">Second Half</string>
    <string name="already_exist">Already have an account ?</string>
    <string name="meal_monkey">Meal Monkey</string>
    <string name="name_hint">Name</string>
    <string name="email_hint">email</string>
    <string name="password_hint">password</string>
    <string name="sign_up">Sign up</string>
    <string name="login">Login</string>
    <string name="new_account">Create new account</string>
    <string name="welcome">Welcome to Meal Monkey</string>
    <string name="web_view">Web View</string>
    <string name="play_song">Play a song</string>
    <string name="play_video">Play a video</string>
</resources>