<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:textStyle="bold"
        android:gravity="center"
        android:textSize="20sp"
        android:fontFamily="sans-serif-black"
        android:id="@+id/web_text"
        android:textColor="@color/white"
        android:background="@drawable/web_view_gradient"
        android:text="@string/web_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <TextView
        android:textColor="@color/white"
        android:textStyle="bold"
        android:gravity="center"
        android:textSize="20sp"
        android:fontFamily="sans-serif-black"
        android:background="@drawable/song_gradient"
        android:id="@+id/song_text"
        android:text="@string/play_song"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <TextView
        android:textColor="@color/white"
        android:textStyle="bold"
        android:gravity="center"
        android:textSize="20sp"
        android:fontFamily="sans-serif-black"
        android:background="@drawable/video_gradient"
        android:id="@+id/video_text"
        android:text="@string/play_video"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>



</LinearLayout>